--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -216,10 +216,10 @@ a.secondary {
     color: var(--button-primary);
     text-decoration: none;
     background-color: var(--button-secondary);
-    padding: 10px 15px;
+    padding: 8px 30px;
     border: 2px solid transparent;
-    border-radius: 15px;
-    -webkit-border-radius: 15px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
@@ -396,8 +396,8 @@ div.container > div.content > div.form-footer {
 }
 
 div.container > div.content > div.form-footer > p {
-    margin-top: 4px;
-    margin-bottom: 12px;
+    margin-top: 31px;
+    margin-bottom: 31px;
 }
 
 div.container > div.content > div.form-footer > p > a.secondary {
@@ -445,4 +445,350 @@ div.container > div.content > div.form-box > form#resetPasswordForm > div.passwo
 
 div.container > div.content > div.form-box > form#resetPasswordForm > div.center > button.reset-password-submit-btn {
     font-size: 18px;
+}
+
+/* student_course_page_exam */
+.navbar {
+    background-color: #2395f8;
+    color: white;
+    padding: .5rem 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-left, .nav-right {
+    display: flex;
+    align-items: center;
+    gap: 2.3rem;
+}
+.nav-img {
+    width: 32px;
+    height: 32px;
+    filter: brightness(0) invert(1);
+    transition: all 0.3s ease;
+}
+.nav-img:hover {
+    opacity: 0.8;
+    transform: scale(1.1);
+}
+.logo-img {
+    height: 40px;
+    margin-left: 115px;
+    width: auto;
+    filter: brightness(0) invert(1);
+}
+.nav-link {
+    color: white;
+    text-decoration: none;
+}
+.nav-link:hover {
+    text-decoration: none;
+}
+.btn {
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: 500;
+}
+.btn-dark {
+    background-color: #34435E;
+    border-radius: 7px;
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
+    font-weight: 550;
+}
+.btn-dark:hover {
+    background-color: white;
+    color: #2196f3;
+    font-weight: 550;
+}
+.main-container {
+    display: flex;
+    padding: 30px;
+    margin: 0px;
+}
+.exercise-left {
+    flex: 2;
+    padding-right: 40px;
+}
+.exercise-title {
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 20px;
+    color: #000;
+    padding-left: 330px;
+}
+.question-section {
+    font-size: 19px;
+    margin-bottom: 20px;
+    padding-left: 236px;
+    margin-right: 55px;
+}
+.question-text {
+    font-weight: 600;
+    margin-bottom: 8px;
+    color: #3A3A3A;
+}
+.mcq-options label {
+    display: block;
+    background-color: white;
+    padding:5px 8px;
+    border-radius: 4px;
+    margin-bottom: 5px;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    width: auto;
+    font-weight: 600;
+}
+.mcq-options label.selected {
+    background-color: #999999;
+    font-weight: 600;
+}
+.mcq-options label .choice-text {
+    color: #3A3A3A;
+}
+.mcq-options input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 20px;
+    height: 20px;
+    border: 3px solid #3A3A3A;
+    border-radius: 50%;
+    margin-right: 12px;
+    position: relative;
+    top: 3px;
+    cursor: pointer;
+    background-color: transparent;
+    transition: background-color 0s;
+}
+.mcq-options input[type="checkbox"]:checked {
+    background-color: #3A3A3A;
+}
+.mcq-options input[type="checkbox"]:checked::before {
+    content: '';
+    display: block;
+    width: 8px;
+    height: 8px;
+    background-color: #B6B6B6;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-45%, -45%);
+}
+input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+.submit-btn {
+    margin-top: 10px;
+    background-color: #34435E;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+    font-weight: 550;
+}
+.submit-btn:hover {
+    background-color: white;
+    color: #2196f3;
+    font-weight: 550;
+}
+.exercise-right {
+    width: 45%;
+    padding-left: 110px;
+    margin-right: 40px;
+}
+.course-progress {
+    background-color: #2196f3;
+    color: white;
+    padding: 16px;
+    border-radius: 6px;
+    margin-bottom: 20px;
+}
+.course-name {
+    font-weight: 600;
+    font-size: 29px;
+}
+.progress-text {
+    display: flex;
+    justify-content: space-between;
+    font-size: 19px;
+}
+.progress-percent {
+    font-weight: bold;
+}
+.section {
+    background-color: #34435E;
+    color: #B6B6B6;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+.section-header {
+    padding: 10px 16px;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    font-size: 27px;
+}
+.section-header .arrow-icon {
+    cursor: pointer;
+}
+.arrow-image {
+    width: 35px;
+    height: auto;
+    vertical-align: middle;
+    margin-left: 10px;
+    transform: translateX(-7px);
+}
+.section-content {
+    background-color: white;
+    color: #333;
+    padding: 12px;
+    display: none;
+}
+.section.open .section-content {
+    display: block;
+}
+.object {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 4px;
+    font-size: 25px;
+    color: #3A3A3A;
+}
+.object-icon {
+    width: 50px;
+    height: auto;
+    margin-right: 18px;
+    vertical-align: middle;
+}
+
+.object-name {
+    margin-right: 220px;
+    font-size:28px;
+    font-weight:600;
+}
+.object-number{
+    font-weight: 600;
+    font-size:30px;
+}
+
+/* student_course_page_document */
+/* PDF Container */
+.pdf-container {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 300px;
+}
+.file-name {
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 24px;
+    color: #000000;
+}
+.download-btn {
+    background-color: #2395f8;
+    color: white;
+    border: none;
+    padding: 12px 32px;
+    border-radius: 7px;
+    font-size: 25px;
+    font-weight: 350;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.download-btn:hover {
+    background-color: white;
+    color: #2395f8;
+    border: 2px solid #2395f8; 
+}
+
+/* student_course_page_video */
+/* Video Section */
+.video-placeholder {
+    background-color: #d9d9d9;
+    width: 100%;
+    aspect-ratio: 16/9;
+    border-radius: 4px;
+    margin-left: 33px;
+}
+.video-title {
+    font-size: 32px;
+    font-weight: bold;
+    margin-top: 16px;
+    color: #000000;
+    padding-left: 33px;
+}
+.video-description {
+    font-size: 20px;
+    margin-top: 8px;
+    color: #3a3a3a;
+    padding-left: 33px;
+}
+
+/* teacher_course_page_exam */
+.teacher-exam .btn-dark {
+    margin-top: 13px;
+    display: block;
+}
+.add-object-btn {
+    background-color: #B6B6B6;
+    color: white;
+    border: none;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    cursor: pointer;
+    font-size: 25px;
+    font-weight:600;
+    height: 62px;
+}.section-btn-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1rem;
+}
+.delete-icon {
+    cursor: pointer;
+    position: relative;
+    left: -20px;
+}
+.edit-icon {
+    cursor: pointer;
+    position: relative;
+    left: -10px;
+    top: 5px;
+}
+.add-icon {
+    cursor: pointer;
+    position: relative;
+    left: -10px;
+    scale: 1.2;
+}
+.teacher-exam .section-content {
+    background-color: white;
+    color: #333;
+    padding: 4px;
+    display: none;
+}
+#addSectionBtn {
+    transform: translateX(-220px);
+}
+.question-actions {
+  display: flex;
+  gap: 15px;
 }
